syntax = "proto3";

package redditclone;

option go_package = "github.com/tejasriramparvathaneni/reddit_clone/proto";

//PID message
message PID {
  string address = 1;
  string id = 2;
}

// User Messages
message RegisterUser {
  string username = 1;
  string password = 2;
}

message RegistrationResponse {
  bool success = 1;
  string message = 2;
}

message AuthenticateUser {
  string username = 1;
  string password = 2;
}

message AuthenticationResponse {
  bool success = 1;
  string message = 2;
}

message UpdateKarma {
  string username = 1;
  int32 amount = 2; // Can be positive or negative
}

message SendDirectMessage {
  string from_username = 1;
  string to_username = 2;
  string content = 3;
}

message DirectMessage {
  string from_username = 1;
  string content = 2;
  int64 timestamp = 3;
}

message GetInbox {
  string username = 1;
}

message Inbox {
  repeated DirectMessage messages = 1;
}

// Subreddit Messages
message CreateSubreddit {
  string name = 1;
}

message JoinSubreddit {
  string username = 1;
  string subreddit_name = 2;
  PID user_pid = 3;
  PID subreddit_pid = 4; // Added field
}

message LeaveSubreddit {
  string username = 1;
  string subreddit_name = 2;
}

message PostToSubreddit {
  string content = 1;
  string author = 2;
  string subreddit_name = 3;
}

message NewPostNotification {
  string subreddit_name = 1;
  string post_id = 2;
  string content = 3;
  string author = 4;
}

message GetSubredditPosts {}

message SubredditPosts {
  repeated Post posts = 1;
}

// Post Messages
message GetPostDetails {}

message Post {
  string content = 1;
  string author = 2;
  string subreddit_name = 3;
  int64 timestamp = 4;
  int32 upvotes = 5;
  int32 downvotes = 6;
  string post_id = 7;
}

message CommentOnPost {
  string content = 1;
  string author = 2;
  string post_id = 3;
}

message VoteOnPost {
  string post_id = 1;
  bool upvote = 2;
  string voter = 3;
}

// Comment Messages
message CommentOnComment {
  string content = 1;
  string author = 2;
  string parent_comment_id = 3;
}

message VoteOnComment {
  string comment_id = 1;
  bool upvote = 2;
  string voter = 3;
}

// Feed Messages
message GetFeed {
  string username = 1;
}

message Feed {
  repeated Post posts = 1;
}

// Repost Message
message Repost {
  string content = 1;
  string author = 2;
  string original_post_id = 3;
  string subreddit_name = 4;
}
